fixing overflow

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,21 @@
-﻿body {
+﻿html{
+  overflow: hidden;
+  height:100%;
+}
+body {
   background-color: #faaca8;
   background-image: linear-gradient(19deg, #faaca8 0%, #ddd6f3 100%);
   height: 100vh;
 }
 footer {
   clear: both;
-  position: absolute;
-  bottom: -69px;
+  height: 5%;
+  width: auto;
+  position: fixed;
+  bottom: 0px;
   left: 50%;
   transform: translate(-50%);
+  overflow: hidden;
 }
 #login {
   position: relative;
